--- a/init.ipynb
+++ b/init.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%env JAVA_HOME=/data/tools/jdk1.8.0_231/\n",
-    "os.environ['PATH'] =   '/data/tools/jdk1.8.0_231/bin/' + os.pathsep + os.environ['PATH']\n",
-    "! java -version"
+    "# Notatnik do utworzenia środowiska pracy\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Uwaga:</b> Należy upewnić się że w prawym górnym rogu tego okna wybrany jest kernel \"edugen\" a nie \"Python 3\"\n",
+    "</div>"
    ]
   },
   {
@@ -17,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## DIR structure\n",
+    "## Utowrzenie struktury folderów\n",
     "import subprocess\n",
     "subprocess.call(['mkdir', 'sandbox'], shell=False)\n",
     "subprocess.call(['mkdir', 'ref'], shell=False)\n",
@@ -36,21 +35,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! gsutil ls gs://gatk-tutorials/workshop_1906/2-germline/gvcfs/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Download data\n",
-    "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/ref/* ref\n",
-    "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/trio.ped \n",
+    "## Pobranie plików do zajęć\n",
+    "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/ref/* ref/\n",
+    "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/trio.ped .\n",
     "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/resources/* resources/\n",
-    "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/bams/* bam/    \n",
-    "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/gvcfs/* gvcf/    "
+    "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/bams/* bam/\n",
+    "! gsutil cp gs://gatk-tutorials/workshop_1906/2-germline/gvcfs/* gvcf/"
    ]
   },
   {
@@ -59,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Convert BAM to FASTQ\n",
+    "## Konwersja plików BAM do FASTQ\n",
     "! samtools sort -n bam/mother.bam -o bam/mother.qsort.bam\n",
     "! bedtools bamtofastq -i bam/mother.qsort.bam -fq fastq/mother_1.fq -fq2 fastq/mother_2.fq\n",
     "! samtools sort -n bam/father.bam -o bam/father.qsort.bam\n",
@@ -70,26 +60,16 @@
     "! cat fastq/father_1.fq fastq/father_2.fq | paste - - - - | sort -k1,1 -t \" \" | tr \"\\t\" \"\\n\" > fastq/father.fq\n",
     "! cat fastq/son_1.fq fastq/son_2.fq | paste - - - - | sort -k1,1 -t \" \" | tr \"\\t\" \"\\n\" > fastq/son.fq\n",
     "! rm -f fastq/*1.fq\n",
-    "! rm -f fastq/*2.fq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Download notebooks and images\n",
-    "! cp /data/edugen/genomika/*.ipynb ./\n",
-    "! cp /data/edugen/genomika/*.png png/"
+    "! rm -f fastq/*2.fq\n",
+    "! bwa index -a is ref/ref.fasta hg19"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "edugen",
    "language": "python",
-   "name": "python3"
+   "name": "edugen"
   },
   "language_info": {
    "codemirror_mode": {
@@ -101,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
