--- a/GATK_VD.ipynb
+++ b/GATK_VD.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,20 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating gs://bucket-tgambin/...\n",
+      "ServiceException: 409 Bucket bucket-tgambin already exists.\n",
       "No changes made to gs://bucket-tgambin/\n"
      ]
     }
    ],
    "source": [
     "! gsutil mb gs://bucket-$USER\n",
-    "#! gsutil iam ch -d allUsers:objectViewer gs://bucket-$USER"
+    "! gsutil iam ch  allUsers:objectViewer gs://bucket-$USER"
    ]
   },
   {
@@ -327,9 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ce67884e1794c93bd0d6a94a3b917c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IGV(id='igv_9478132', initialConfig={'id': 'igv_9478132', 'locus': '', 'genome': 'hg19'})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from igv_jupyterlab import IGV\n",
     "# At minimum, IGV requires a single argument, genome.\n",
