vd_solutions cleaning

--- a/vd_solutions.ipynb
+++ b/vd_solutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "    text_file.write(\"%s\" % content)\n",
     "    text_file.close()\n",
     "    !gsutil cp {file_name} \"gs://bucket-edugen/\"\n",
-    "    !gsutil ls \"gs://bucket-edugen/\"\n",
+    "    #!gsutil ls \"gs://bucket-edugen/\"\n",
     "    !rm {file_name}\n",
     "def remove_solution( file_name):\n",
     "    !gsutil rm  'gs://bucket-edugen/{file_name}'\n",
@@ -107,7 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeAll():\n",
+    "    remove_solution(\"ex1\")\n",
+    "    remove_solution(\"ex4\")\n",
+    "    remove_solution(\"ex6\")\n",
+    "    remove_solution(\"ex9\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -115,18 +128,8 @@
      "output_type": "stream",
      "text": [
       "Copying file://ex1 [Content-Type=application/octet-stream]...\n",
-      "/ [1 files][  136.0 B/  136.0 B]                                                \n",
-      "Operation completed over 1 objects/136.0 B.                                      \n",
-      "gs://bucket-edugen/ex1\n",
-      "gs://bucket-edugen/ex1.txt\n",
-      "gs://bucket-edugen/hg19.dict\n",
-      "gs://bucket-edugen/hg19.fa\n",
-      "gs://bucket-edugen/hg19.fa.amb\n",
-      "gs://bucket-edugen/hg19.fa.ann\n",
-      "gs://bucket-edugen/hg19.fa.bwt\n",
-      "gs://bucket-edugen/hg19.fa.fai\n",
-      "gs://bucket-edugen/hg19.fa.pac\n",
-      "gs://bucket-edugen/hg19.fa.sa\n"
+      "- [1 files][  156.0 B/  156.0 B]                                                \n",
+      "Operation completed over 1 objects/156.0 B.                                      \n"
      ]
     }
    ],
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -145,18 +148,7 @@
      "text": [
       "Copying file://ex4 [Content-Type=application/octet-stream]...\n",
       "/ [1 files][  1.1 KiB/  1.1 KiB]                                                \n",
-      "Operation completed over 1 objects/1.1 KiB.                                      \n",
-      "gs://bucket-edugen/ex1\n",
-      "gs://bucket-edugen/ex1.txt\n",
-      "gs://bucket-edugen/ex4\n",
-      "gs://bucket-edugen/hg19.dict\n",
-      "gs://bucket-edugen/hg19.fa\n",
-      "gs://bucket-edugen/hg19.fa.amb\n",
-      "gs://bucket-edugen/hg19.fa.ann\n",
-      "gs://bucket-edugen/hg19.fa.bwt\n",
-      "gs://bucket-edugen/hg19.fa.fai\n",
-      "gs://bucket-edugen/hg19.fa.pac\n",
-      "gs://bucket-edugen/hg19.fa.sa\n"
+      "Operation completed over 1 objects/1.1 KiB.                                      \n"
      ]
     }
    ],
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -174,20 +166,8 @@
      "output_type": "stream",
      "text": [
       "Copying file://ex6 [Content-Type=application/octet-stream]...\n",
-      "/ [1 files][  722.0 B/  722.0 B]                                                \n",
-      "Operation completed over 1 objects/722.0 B.                                      \n",
-      "gs://bucket-edugen/ex1\n",
-      "gs://bucket-edugen/ex1.txt\n",
-      "gs://bucket-edugen/ex4\n",
-      "gs://bucket-edugen/ex6\n",
-      "gs://bucket-edugen/hg19.dict\n",
-      "gs://bucket-edugen/hg19.fa\n",
-      "gs://bucket-edugen/hg19.fa.amb\n",
-      "gs://bucket-edugen/hg19.fa.ann\n",
-      "gs://bucket-edugen/hg19.fa.bwt\n",
-      "gs://bucket-edugen/hg19.fa.fai\n",
-      "gs://bucket-edugen/hg19.fa.pac\n",
-      "gs://bucket-edugen/hg19.fa.sa\n"
+      "/ [1 files][  752.0 B/  752.0 B]                                                \n",
+      "Operation completed over 1 objects/752.0 B.                                      \n"
      ]
     }
    ],
@@ -197,52 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "remove_solution() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-4fa011e0f4db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mremove_solution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mex5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ex5\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: remove_solution() takes 1 positional argument but 2 were given"
-     ]
-    }
-   ],
-   "source": [
-    "publish_solution(ex6,\"ex9\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying file://ex1 [Content-Type=application/octet-stream]...\n",
-      "/ [1 files][  156.0 B/  156.0 B]                                                \n",
-      "Operation completed over 1 objects/156.0 B.                                      \n",
-      "gs://bucket-edugen/ex1\n",
-      "gs://bucket-edugen/ex1.txt\n",
-      "gs://bucket-edugen/hg19.dict\n",
-      "gs://bucket-edugen/hg19.fa\n",
-      "gs://bucket-edugen/hg19.fa.amb\n",
-      "gs://bucket-edugen/hg19.fa.ann\n",
-      "gs://bucket-edugen/hg19.fa.bwt\n",
-      "gs://bucket-edugen/hg19.fa.fai\n",
-      "gs://bucket-edugen/hg19.fa.pac\n",
-      "gs://bucket-edugen/hg19.fa.sa\n"
+      "Copying file://ex9 [Content-Type=application/octet-stream]...\n",
+      "/ [1 files][  251.0 B/  251.0 B]                                                \n",
+      "Operation completed over 1 objects/251.0 B.                                      \n"
      ]
     }
    ],
    "source": [
-    "publish_solution(ex1,\"ex1\")"
+    "publish_solution(ex9,\"ex9\")"
    ]
   },
   {
@@ -269,8 +218,15 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "remove_solution(\"ex1\")"
+    "remo"
    ]
   }
  ],
