--- a/vd_solutions.ipynb
+++ b/vd_solutions.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def publish_solution(content, file_name):\n",
@@ -107,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,105 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying file://ex1 [Content-Type=application/octet-stream]...\n",
-      "- [1 files][  156.0 B/  156.0 B]                                                \n",
-      "Operation completed over 1 objects/156.0 B.                                      \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "publish_solution(ex1,\"ex1\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying file://ex4 [Content-Type=application/octet-stream]...\n",
-      "/ [1 files][  1.1 KiB/  1.1 KiB]                                                \n",
-      "Operation completed over 1 objects/1.1 KiB.                                      \n"
-     ]
-    }
-   ],
-   "source": [
-    "publish_solution(ex4,\"ex4\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying file://ex6 [Content-Type=application/octet-stream]...\n",
-      "/ [1 files][  752.0 B/  752.0 B]                                                \n",
-      "Operation completed over 1 objects/752.0 B.                                      \n"
-     ]
-    }
-   ],
-   "source": [
-    "publish_solution(ex6,\"ex6\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying file://ex9 [Content-Type=application/octet-stream]...\n",
-      "/ [1 files][  251.0 B/  251.0 B]                                                \n",
-      "Operation completed over 1 objects/251.0 B.                                      \n"
-     ]
-    }
-   ],
-   "source": [
-    "publish_solution(ex9,\"ex9\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removing gs://bucket-edugen/ex1...\n",
-      "/ [1 objects]                                                                   \n",
-      "Operation completed over 1 objects.                                              \n",
-      "gs://bucket-edugen/ex1.txt\n",
-      "gs://bucket-edugen/hg19.dict\n",
-      "gs://bucket-edugen/hg19.fa\n",
-      "gs://bucket-edugen/hg19.fa.amb\n",
-      "gs://bucket-edugen/hg19.fa.ann\n",
-      "gs://bucket-edugen/hg19.fa.bwt\n",
-      "gs://bucket-edugen/hg19.fa.fai\n",
-      "gs://bucket-edugen/hg19.fa.pac\n",
-      "gs://bucket-edugen/hg19.fa.sa\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -226,8 +137,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remo"
+    "publish_solution(ex4,\"ex4\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "publish_solution(ex6,\"ex6\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "publish_solution(ex9,\"ex9\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "removeAll()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
