--- a/VCF.ipynb
+++ b/VCF.ipynb
@@ -253,6 +253,35 @@
    "metadata": {},
    "source": [
     "***\n",
+    "# Programy do zarządzania przepływem danych\n",
+    "\n",
+    "Najczęsciej w przypadku analizy danych genomowych mamy wiele próbek które mogą wymagac odpowiedniej obróbki bioinformatycznej. Dlatego możemy stworzyć stałe, okreslone zadania i skrypty. Przydaja się do tego programy pomagające w przepływie danych i pracy, które pozwalają na automatyzację procesów, a także tworzenie powtarzalnych i skalowalnych analiz danych. Pozwalają na konfigurację, kontrolę jakości i monitorowanie sekwencji zadań. Z ich pomocą możemy tworzyć gotowe schematy reguł co ułatwi nam uruchomienie wybranych procesów w dowolnym momencie.\n",
+    "\n",
+    "Przykładem takiego narzędzie może być <a href=\"https://snakemake.readthedocs.io/en/stable/\">Snakemake</a>. Pozwala on na stworzenie reguł, które opisują co należy zrobić, aby z danych plików wejściowych, przeprowadzając konkretne działania, powstały określone pliki wyjściowe.\n",
+    "\n",
+    "**Graficzny przykład reguły:**<br>\n",
+    "<img src=\"png/snakemake.png\">\n",
+    "\n",
+    "\n",
+    "**Przykład reguły:**\n",
+    "\n",
+    "rule bwa:<br>\n",
+    "    input:<br>\n",
+    "        \"data/genome.fa\",<br>\n",
+    "        \"data/samples/A.fastq\"<br>\n",
+    "    output:<br>\n",
+    "        \"mapped/A.bam\"<br>\n",
+    "    conda:<br>\n",
+    "        \"envs/mapping.yaml\"<br>\n",
+    "    shell:<br>\n",
+    "        \"bwa mem {input} | samtools view -Sb - > {output}\"<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
     "# Analiza danych pacjentów z rzadkimi chorobami monogenowymi\n",
     "\n",
     "Kolejne kroki w priorytetyzacji wariantów:\n",
