remove gsutil, fix23L

--- a/GATK_VD.ipynb
+++ b/GATK_VD.ipynb
@@ -32,44 +32,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Najpierw troche magii :), czyli kod pozwalający podglądać rozwiązania kolejnych zadań"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "from IPython.core.magic import Magics, magics_class, line_magic\n",
-    "import subprocess\n",
-    "def create_new_cell(contents):\n",
-    "    from IPython.core.getipython import get_ipython\n",
-    "    shell = get_ipython()\n",
-    "    shell.set_next_input(contents, replace=True)\n",
-    "\n",
-    "def get_solution(solution_file, solution_local):\n",
-    "    subprocess.call(['gsutil' ,'cp', solution_file, solution_local ])\n",
-    "    myfile = open(solution_local)\n",
-    "    lines = myfile.read()\n",
-    "    myfile.close()\n",
-    "    ! rm {solution_local}\n",
-    "    return lines\n",
-    "    \n",
-    "@magics_class\n",
-    "class MyMagics(Magics):\n",
-    "\n",
-    "    @line_magic\n",
-    "    def lmagic(self, line):\n",
-    "        \"Replace current line with new output\"\n",
-    "        raw_code = get_solution(\"gs://bucket-edugen/\"+line,line)\n",
-    "        self.shell.set_next_input('# %lmagic '+line+'\\n{}'.format(raw_code), replace=True)\n",
-    "      \n",
-    "ip = get_ipython()\n",
-    "ip.register_magics(MyMagics)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -81,9 +51,12 @@
     "user_name = os.environ.get('USER')\n",
     "print(user_name)\n",
     "\n",
-    "workspace = \"/home/jovyan/work/git/edugen_pub/\"\n",
+    "workspace = \"/tmp/jovyan/work/git/edugen_pub/\"\n",
     "os.environ['WORKSPACE'] = workspace\n",
-    "! echo ${WORKSPACE}"
+    "! echo ${WORKSPACE}\n",
+    "\n",
+    "edugen_bucket  = \"gs://biodatageeks/sequila/edugen/\"\n",
+    "os.environ['EDUGEN_BUCKET'] = edugen_bucket"
    ]
   },
   {
@@ -93,9 +66,7 @@
    "outputs": [],
    "source": [
     "def clean_all(): \n",
-    "    ! rm -r sandbox_trio\n",
-    "    ! gsutil rm gs://bucket-$USER/*vcf*\n",
-    "    ! gsutil rm gs://bucket-$USER/*bam*"
+    "    ! rm -r sandbox_trio"
    ]
   },
   {
@@ -105,23 +76,6 @@
    "outputs": [],
    "source": [
     "#clean_all()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Utworzenie własnego kubełka i jego upubliczenienie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! gsutil mb gs://bucket-$USER\n",
-    "! gsutil iam ch  allUsers:objectViewer gs://bucket-$USER"
    ]
   },
   {
@@ -168,16 +122,16 @@
    "source": [
     "! bgzip -c ${WORKSPACE}/sandbox/motherHC.vcf > ${WORKSPACE}/sandbox/motherHC.vcf.gz\n",
     "! tabix ${WORKSPACE}/sandbox/motherHC.vcf.gz\n",
-    "! gsutil cp sandbox/motherHC.vcf.gz* gs://bucket-$USER/"
+    "#! gsutil cp sandbox/motherHC.vcf.gz* gs://bucket-$USER/"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Zadanie 1*:</b> Skopiuj plik bam i bai do swojego kubełka  \n",
-    "</div>"
+    "!gsutil ls gs://biodatageeks/sequila/edugen/"
    ]
   },
   {
@@ -202,15 +156,15 @@
     "time.sleep(3)\n",
     "t1 = igv.create_track(\n",
     "        name = \"mother BAM\",\n",
-    "        url = \"gs://bucket-\"+user_name+\"/mother.bam\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/mother.bam.bai\",        \n",
+    "        url = edugen_bucket + \"bam/mother.bam\",\n",
+    "        index_url=edugen_bucket + \"bam/mother.bai\",        \n",
     "        indexed= True\n",
     ")\n",
     "\n",
     "t2 = igv.create_track(\n",
     "        name= \"mother HC VCF\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/motherHC.vcf.gz\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/motherHC.vcf.gz.tbi\",\n",
+    "        url= edugen_bucket+\"motherHC.vcf.gz\",\n",
+    "        index_url= edugen_bucket+\"motherHC.vcf.gz.tbi\",\n",
     "        indexed= True,\n",
     "        visibilityWindow= 1000\n",
     ")\n",
@@ -369,7 +323,7 @@
    "source": [
     "! bgzip -c ${WORKSPACE}/sandbox/motherHC.g.vcf > ${WORKSPACE}/sandbox/motherHC.g.vcf.gz\n",
     "! tabix ${WORKSPACE}/sandbox/motherHC.g.vcf.gz\n",
-    "! gsutil cp sandbox/motherHC.g.vcf* gs://bucket-$USER/"
+    "#! gsutil cp sandbox/motherHC.g.vcf* gs://bucket-$USER/"
    ]
   },
   {
@@ -386,8 +340,8 @@
     "\n",
     "t2 = igv.create_track(\n",
     "        name= \"mother HC debug BAM\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/motherHCdebug.bam\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/motherHCdebug.bai\",\n",
+    "        url= edugen_bucket + \"bam/motherHCdebug.bam\",\n",
+    "        index_url= edugen_bucket + \"bam/motherHCdebug.bai\",\n",
     "        indexed= True,\n",
     "        showSoftClips=True,\n",
     "        colorBy=\"tag\",\n",
@@ -397,8 +351,8 @@
     ")\n",
     "t3 = igv.create_track(\n",
     "        name= \"mother HC VCF\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/motherHC.g.vcf.gz\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/motherHC.g.vcf.gz.tbi\",\n",
+    "        url= edugen_bucket + \"motherHC.g.vcf.gz\",\n",
+    "        index_url= edugen_bucket + \"motherHC.g.vcf.gz.tbi\",\n",
     "        indexed= True,\n",
     "        visibilityWindow= 1000\n",
     ")\n",
@@ -523,7 +477,7 @@
    "source": [
     "! bgzip -c ${WORKSPACE}/sandbox/trioGGVCF.vcf > ${WORKSPACE}/sandbox/trioGGVCF.vcf.gz\n",
     "! tabix ${WORKSPACE}/sandbox/trioGGVCF.vcf.gz\n",
-    "! gsutil cp sandbox/trioGGVCF.vcf.gz* gs://bucket-$USER/"
+    "#! gsutil cp sandbox/trioGGVCF.vcf.gz* gs://bucket-$USER/"
    ]
   },
   {
@@ -541,8 +495,8 @@
     "\n",
     "t3 = igv.create_track(\n",
     "        name= \"trio VCF\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/trioGGVCF.vcf.gz\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/trioGGVCF.vcf.gz.tbi\",\n",
+    "        url= edugen_bucket +\"trioGGVCF.vcf.gz\",\n",
+    "        index_url=edugen_bucket +\"trioGGVCF.vcf.gz.tbi\",\n",
     "        indexed= True,\n",
     "        visibilityWindow= 1000\n",
     ")\n",
@@ -608,8 +562,8 @@
     "! tabix -f ${WORKSPACE}/sandbox/trioCGP.vcf.gz\n",
     "! bgzip -c  ${WORKSPACE}/sandbox/trioCGP_gnomad.vcf > ${WORKSPACE}/sandbox/trioCGP_gnomad.vcf.gz\n",
     "! tabix -f ${WORKSPACE}/sandbox/trioCGP_gnomad.vcf.gz\n",
-    "! gsutil cp  ${WORKSPACE}/sandbox/trioGGVCF* gs://bucket-$USER/\n",
-    "! gsutil cp  ${WORKSPACE}/sandbox/trioCGP* gs://bucket-$USER/\n"
+    "#! gsutil cp  ${WORKSPACE}/sandbox/trioGGVCF* gs://bucket-$USER/\n",
+    "#! gsutil cp  ${WORKSPACE}/sandbox/trioCGP* gs://bucket-$USER/\n"
    ]
   },
   {
@@ -618,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!gsutil ls \"gs://bucket-\"$USER"
+    "!gsutil ls ${EDUGEN_BUCKET}"
    ]
   },
   {
@@ -636,16 +590,16 @@
     "\n",
     "t1 = igv.create_track(\n",
     "        name= \"trio GVCF\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/trioGGVCF.vcf.gz\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/trioGGVCF.vcf.gz.tbi\",\n",
+    "        url= edugen_bucket+\"trioGGVCF.vcf.gz\",\n",
+    "        index_url= edugen_bucket+\"trioGGVCF.vcf.gz.tbi\",\n",
     "        indexed= True,\n",
     "        visibilityWindow= 1000\n",
     ")\n",
     "\n",
     "t2 = igv.create_track(\n",
     "        name= \"trio CGP\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/trioCGP.vcf.gz\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/trioCGP.vcf.gz.tbi\",\n",
+    "        url= edugen_bucket+\"trioCGP.vcf.gz\",\n",
+    "        index_url= edugen_bucket+\"trioCGP.vcf.gz.tbi\",\n",
     "        indexed= True,\n",
     "        visibilityWindow= 1000\n",
     ")\n",
@@ -653,8 +607,8 @@
     "\n",
     "t3 = igv.create_track(\n",
     "        name= \"trio CGP gnomad\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/trioCGP_gnomad.vcf.gz\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/trioCGP_gnomad.vcf.gz.tbi\",\n",
+    "        url= edugen_bucket+\"trioCGP_gnomad.vcf.gz\",\n",
+    "        index_url= edugen_bucket+\"trioCGP_gnomad.vcf.gz.tbi\",\n",
     "        indexed= True,\n",
     "        visibilityWindow= 1000\n",
     ")\n",
@@ -858,7 +812,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"gnomad_genome.af.af_popmax\"].plot(figsize=(20,10))"
+    "df[\"gnomad_genome.af.af\"].plot(figsize=(20,10))"
    ]
   },
   {
@@ -869,13 +823,6 @@
    "source": [
     "df.groupby(['dbsnp.gene.name']).count()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -894,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
