--- a/vd_solutions.ipynb
+++ b/vd_solutions.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def publish_solution(content, file_name):\n",
@@ -31,7 +27,6 @@
     "ex4 = '''#Solution to ex4\n",
     "\n",
     "\n",
-    "! gsutil cp sandbox/motherHCdebug.ba* gs://bucket-$USER/\n",
     "from igv_jupyterlab import IGV\n",
     "# At minimum, IGV requires a single argument, genome.\n",
     "# For supported genomes, a simple name may be supplied.\n",
@@ -41,24 +36,24 @@
     "time.sleep(3)\n",
     "t1 = igv.create_track(\n",
     "        name = \"mother BAM\",\n",
-    "        url = \"gs://bucket-\"+user_name+\"/mother.bam\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/mother.bam.bai\",    \n",
+    "        url = edugen_bucket + \"bam/mother.bam\",\n",
+    "        index_url= edugen_bucket + \"bam/mother.bai\",    \n",
     "        showSoftClips=True,\n",
     "        indexed= True\n",
     ")\n",
     "\n",
     "t2 = igv.create_track(\n",
     "        name= \"mother HC debug BAM\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/motherHCdebug.bam\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/motherHCdebug.bai\",\n",
+    "        url= edugen_bucket + \"bam/motherHCdebug.bam\",\n",
+    "        index_url= edugen_bucket + \"bam/motherHCdebug.bai\",\n",
     "        indexed= True,\n",
     "        showSoftClips=True,\n",
     "        visibilityWindow= 1000\n",
     ")\n",
     "t3 = igv.create_track(\n",
     "        name= \"mother HC VCF\",\n",
-    "        url= \"gs://bucket-\"+user_name+\"/motherHC.vcf.gz\",\n",
-    "        index_url= \"gs://bucket-\"+user_name+\"/motherHC.vcf.gz.tbi\",\n",
+    "        url= edugen_bucket + \"bam/motherHC.vcf.gz\",\n",
+    "        index_url= edugen_bucket + \"bam/motherHC.vcf.gz.tbi\",\n",
     "        indexed= True,\n",
     "        visibilityWindow= 1000\n",
     ")\n",
@@ -107,6 +102,41 @@
     "plt.axis([None, None, 0, 40])\n",
     "fig=plt.figure(figsize=(150, 15))\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import print_function\n",
+    "from IPython.core.magic import Magics, magics_class, line_magic\n",
+    "import subprocess\n",
+    "def create_new_cell(contents):\n",
+    "    from IPython.core.getipython import get_ipython\n",
+    "    shell = get_ipython()\n",
+    "    shell.set_next_input(contents, replace=True)\n",
+    "\n",
+    "def get_solution(solution_file, solution_local):\n",
+    "    subprocess.call(['gsutil' ,'cp', solution_file, solution_local ])\n",
+    "    myfile = open(solution_local)\n",
+    "    lines = myfile.read()\n",
+    "    myfile.close()\n",
+    "    ! rm {solution_local}\n",
+    "    return lines\n",
+    "    \n",
+    "@magics_class\n",
+    "class MyMagics(Magics):\n",
+    "\n",
+    "    @line_magic\n",
+    "    def lmagic(self, line):\n",
+    "        \"Replace current line with new output\"\n",
+    "        raw_code = get_solution(\"gs://bucket-edugen/\"+line,line)\n",
+    "        self.shell.set_next_input('# %lmagic '+line+'\\n{}'.format(raw_code), replace=True)\n",
+    "      \n",
+    "ip = get_ipython()\n",
+    "ip.register_magics(MyMagics)"
    ]
   },
   {
@@ -191,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
