--- a/1-fastq_bam.ipynb
+++ b/1-fastq_bam.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Część pierwsza\n",
     "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Uwaga:</b> Należy upewnić się że w prawym górnym rogu tego okna wybrany jest kernel \"edugen\" a nie \"Python 3\"\n",
+    "<b>Uwaga:</b> Należy upewnić się że w prawym górnym rogu tego okna wybrany jest kernel \"omics-genomika\" a nie \"Python 3\"\n",
     "</div>\n",
     "\n",
     "***\n",
