small notebooks update

--- a/1-fastq_bam.ipynb
+++ b/1-fastq_bam.ipynb
@@ -526,7 +526,7 @@
     "***\n",
     "Nasze pliki FASTQ zostały utworzone z plików BAM, z użyciem programu `bcftools` w pierwszym notatniku. Za pomocą komendy `flagstat` możemy sprawdzić czy plik BAM który otrzymaliśmy teraz różni się od źródłowego pliku BAM.\n",
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Zadanie:</b> Sprawdź i porównaj informację o źródłowym pliku BAM, który znajduje się w folderze <b>bam/</b>\n",
+    "<b>Zadanie 10:</b> Sprawdź i porównaj informację o źródłowym pliku BAM, który znajduje się w folderze <b>bam/</b>\n",
     "</div>"
    ]
   },
@@ -546,7 +546,7 @@
     "W celu upewnienia się, że odczyty są sparowane poprawnie i zawierają odpowiednie informację o swojej parze, wykonuje się naprawę sparowanych odczytów. Służy do tego komenda `fixmate` programu `samtools`, której dokumentację można znaleźć pod [tym linkiem](http://www.htslib.org/doc/samtools-fixmate.1.html). Dodanie argumentu `-m` powoduje dodanie do pliku informacji o jakości sparowanych odczytów, co będzie pomocne w następnym kroku. Plik BAM musi być posortowany według **nazw odczytów** za pomocą komendy `sort` o której opcjach możemy poczytać [tutaj](http://www.htslib.org/doc/samtools-sort.1.html).\n",
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Zadanie:</b> Na podstawie dokumentacji komendy sort i fixmate najpierw posortuj plik BAM <b>według nazw odczytów</b> a następnie na posortowanym pliku wykonaj komendę fixmate.\n",
+    "<b>Zadanie 11:</b> Na podstawie dokumentacji komendy sort i fixmate najpierw posortuj plik BAM <b>według nazw odczytów</b> a następnie na posortowanym pliku wykonaj komendę fixmate.\n",
     "</div>"
    ]
   },
@@ -571,7 +571,8 @@
     "***\n",
     "## Usuwanie duplikatów\n",
     "W tym kroku usuwamy zduplikowane odczyty. Ma to na celu zredukowanie wpływu nierównomiernej amplifikacji niektórych fragmentów w czasie reakcji PCR, przeprowadzanej podczas przygotowywania biblioteki. Odczyty zawierające regiony bogate w GC lub AT nie są amplifikowane tak efektywnie jak odczyty pozbawione tych regionów. Ten krok **nie jest zalecany** dla niektórych zastosowań, jak np. RNA-seq. Plik BAM powinien byc posortowany według koordynatów oraz mieć naprawione sparowane odczyty z użyciem komendy i argumentu `fixmate -m`. Usuwanie duplikatów wykonuje się za pomoca komendy `markdup`, która posiada [liczne opcje](http://www.htslib.org/doc/samtools-markdup.1.html) i wybiera spośród zduplikowanych odczytów te, które maja najwyższą jakość. Użyjemy opcji która usuwa zduplikowane odczyty, oraz opcji która usuwa dodatkowe odczyty które nie są oznaczone jako odczyty główne (primary).\n",
-    "<b>Zadanie:</b> Na podstawie dokumentacji komendy markdup najpierw posortuj plik BAM <b>według koordynatów</b> a następnie na posortowanym pliku wykonaj komendę markdup z odpowiednimi opcjami.\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Zadanie 12:</b> Na podstawie dokumentacji komendy markdup najpierw posortuj plik BAM <b>według koordynatów</b> a następnie na posortowanym pliku wykonaj komendę markdup z odpowiednimi opcjami.\n",
     "</div>"
    ]
   },
@@ -580,20 +581,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "! samtools sort sandbox/mother_fm.bam \\\n",
-    "-o sandbox/mother_fm_sort.bam"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "! samtools markdup -r -S sandbox/mother_fm_sort.bam \\\n",
-    "sandbox/mother_dup.bam"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -622,9 +617,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "edugen",
+   "display_name": "omics-genomika",
    "language": "python",
-   "name": "edugen"
+   "name": "omics-genomika"
   },
   "language_info": {
    "codemirror_mode": {
@@ -636,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
