--- a/2-gatk_vd.ipynb
+++ b/2-gatk_vd.ipynb
@@ -12,19 +12,9 @@
     "# Wykrywanie wariantów DNA\n",
     "\n",
     "na bazie \n",
-    "https://app.terra.bio/#workspaces/help-gatk/GATKTutorials-Germline-June2019/notebooks/launch/1-gatk-germline-variant-discovery-tutorial.ipynb\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#####\n",
-    "from IPython.display import Image\n",
-    "from IPython.core.display import HTML \n",
-    "Image(url= \"https://storage.googleapis.com/gatk-tutorials/workshop_1906/2-germline/images/vd-image1.png\")"
+    "https://app.terra.bio/#workspaces/help-gatk/GATKTutorials-Germline-June2019/notebooks/launch/1-gatk-germline-variant-discovery-tutorial.ipynb\n",
+    "\n",
+    "<img src=\"png/vd-image1.png\">"
    ]
   },
   {
@@ -33,18 +23,6 @@
    "source": [
     "## Ustawienia zmiennych"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -88,6 +66,8 @@
    "metadata": {},
    "source": [
     "## Wykrywanie wariantów GATK HaplotypeCaller w trybie standardowym\n",
+    "\n",
+    "GATK HaplotypeCaller jest jednym z najbardziej popularnych narzędzi do wykrywania wariantów germinalnych w danych pochodzących z sekwencjonowania wysokoprzepustowego. Dokumentacja znajduje się [pod linkiem](https://gatk.broadinstitute.org/hc/en-us/articles/360037225632-HaplotypeCaller). HaplotypeCaller jest częścią paczki programów Genome Analysis ToolKit (GATK) stworzonych przez Broad Institute. Oferuje on również m.in. algorytm wykrywania wariantów zoptymalizowany do wykrywania wariantów somatycznych - [Mutect2](https://gatk.broadinstitute.org/hc/en-us/articles/360037593851-Mutect2).\n",
     "\n",
     "Wywolanie GATK HC w najprostszej wersji dla pojedynczej próbki"
    ]
@@ -832,9 +812,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "edugen",
+   "display_name": "omics-genomika",
    "language": "python",
-   "name": "edugen"
+   "name": "omics-genomika"
   },
   "language_info": {
    "codemirror_mode": {
@@ -846,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
