--- a/0-init.ipynb
+++ b/0-init.ipynb
@@ -25,7 +25,6 @@
     "subprocess.call(['mkdir', 'vcf'], shell=False)\n",
     "subprocess.call(['mkdir', 'fastq'], shell=False)\n",
     "subprocess.call(['mkdir', 'gvcf'], shell=False)\n",
-    "subprocess.call(['mkdir', 'png'], shell=False)\n",
     "subprocess.call(['mkdir', '-p', 'sandbox/fastqc_reports/'], shell=False)"
    ]
   },
@@ -63,13 +62,20 @@
     "! rm -f fastq/*2.fq\n",
     "! bwa index -a is ref/ref.fasta hg19"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "edugen",
+   "display_name": "omics-genomika",
    "language": "python",
-   "name": "edugen"
+   "name": "omics-genomika"
   },
   "language_info": {
    "codemirror_mode": {
@@ -81,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
