--- a/2-gatk_vd.ipynb
+++ b/2-gatk_vd.ipynb
@@ -132,30 +132,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from igv_jupyterlab import IGV\n",
-    "# At minimum, IGV requires a single argument, genome.\n",
-    "# For supported genomes, a simple name may be supplied.\n",
-    "igv = IGV(genome=\"hg19\" )\n",
-    "display(igv)\n",
-    "import time\n",
-    "time.sleep(3)\n",
-    "t1 = igv.create_track(\n",
-    "        name = \"mother BAM\",\n",
-    "        url = edugen_bucket + \"bam/mother.bam\",\n",
-    "        index_url=edugen_bucket + \"bam/mother.bai\",        \n",
-    "        indexed= True\n",
-    ")\n",
-    "\n",
-    "t2 = igv.create_track(\n",
-    "        name= \"mother HC VCF\",\n",
-    "        url= edugen_bucket+\"motherHC.vcf.gz\",\n",
-    "        index_url= edugen_bucket+\"motherHC.vcf.gz.tbi\",\n",
-    "        indexed= True,\n",
-    "        visibilityWindow= 1000\n",
-    ")\n",
-    "igv.load_track(t1)\n",
-    "igv.load_track(t2)\n",
-    "igv.search_locus(\"20\", 10002294, 10002623)\n"
+    "import igv_notebook\n",
+    "igv_notebook.init()\n",
+    "igv_browser= igv_notebook.Browser(\n",
+    "    {\n",
+    "        \"genome\": \"hg19\",\n",
+    "        \"locus\": \"chr20:10002294-10002623\",\n",
+    "        \"tracks\": [{\n",
+    "            \"name\": \"BAM\",\n",
+    "            \"url\": edugen_bucket + \"bam/mother.bam\",\n",
+    "            \"indexURL\": edugen_bucket + \"bam/mother.bai\",\n",
+    "            \"format\": \"bam\",\n",
+    "            \"type\": \"alignment\"\n",
+    "        }]\n",
+    "    }\n",
+    ")"
    ]
   },
   {
